--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -194,6 +194,23 @@
                     android:textStyle="bold" />
             </TableRow>
 
+            <ToggleButton
+                android:id="@+id/btn_fav"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                android:background="@drawable/favorite_toggle"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:foregroundGravity="bottom"
+                android:textOff=""
+                android:textOn=""
+                app:layout_anchorGravity="bottom|end"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.tabs.TabLayout
@@ -214,6 +231,7 @@
             android:layout_height="match_parent" />
     </TableLayout>
 
+
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/progressBar"
         android:visibility="visible"
@@ -226,5 +244,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tableRow"/>
+
 </FrameLayout>
 
