--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -4,8 +4,14 @@
     <item
         android:id="@+id/search"
         android:title="@string/search"
-        android:icon="@drawable/ic_baseline_search_24"
+        android:icon="@drawable/ic_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
+
+    <item
+        android:id="@+id/change_theme"
+        android:icon="@drawable/ic_setting"
+        android:title="@string/change_theme"
+        app:showAsAction="always" />
 
 </menu>
